# microprocesador

./: .gitignore  CMakeLists.txt  Computer_Top.cpp  Computer_Top.h  Computer_Top.hpp  Computer_Top_v2.cpp  Computer_Top_v2.hpp  Hitos.md  Manual_ISA_v2.md  PROCESSOR_MANUAL.md  PROJECT_HISTORY.md  README.md  ROADMAP_GAMING_CPU.md  count.asm  defensa.md  fibonacci.asm  logic.asm  main.cpp  main_v2.cpp  max3.asm  mult.asm  programa.asm  run_tests.sh  run_tests_v2.sh  snake.asm  test_forwarding.asm  test_loop.asm  test_pipeline.asm  test_rf.asm
ALU/: ALU.cpp  ALU.hpp  ALU_v2.cpp  ALU_v2.hpp  AdderSub4Bit.cpp  AdderSub4Bit.hpp  AdderSub8Bit.cpp  AdderSub8Bit.hpp  ComparatorUnit4Bit.cpp  ComparatorUnit4Bit.hpp  ComparatorUnit8Bit.cpp  ComparatorUnit8Bit.hpp  LogicUnit4Bit.cpp  LogicUnit4Bit.hpp  LogicUnit8Bit.cpp  LogicUnit8Bit.hpp  Mux16to1.cpp  Mux16to1.hpp  main.cpp  sumador
Bus/: main.cpp
Control/: ControlUnit.cpp  ControlUnit.hpp  Decoder.cpp  Decoder.hpp  InstructionRegister.cpp  InstructionRegister.hpp  ProgramCounter.cpp  ProgramCounter.hpp  main.cpp  main_cu.cpp  main_jump.cpp  main_pc.cpp
Memory/: DualPortRAM.cpp  DualPortRAM.hpp  MAR.cpp  MAR.hpp  RAM16x4.cpp  RAM16x4.hpp  RAM16x8.cpp  RAM256x8.cpp  RAM256x8.hpp  main.cpp
Pipeline/: ForwardingUnit.cpp  ForwardingUnit.hpp  HazardDetectionUnit.cpp  HazardDetectionUnit.hpp  PipelineRegisters.cpp  PipelineRegisters.hpp  PipelineTypes.hpp
Registers/: OutputRegister.cpp  OutputRegister.hpp  Register4Bit.cpp  Register4Bit.hpp  RegisterA.cpp  RegisterA.hpp  RegisterB.cpp  RegisterB.hpp  RegisterFile.cpp  RegisterFile.hpp  RegisterFile_v2.cpp  RegisterFile_v2.hpp  main.cpp  main_output.cpp
legacy/: ALU_makefile  Adder4Bit.hpp  FullAdder.cpp  FullAdder.hpp  HalfAdder.cpp  HalfAdder.hpp  RAM16x4.cpp  RAM16x4.hpp  Register4Bit.cpp  Register4Bit.hpp  Substractor4Bit.cpp  Substractor4Bit.hpp  main.cpp  main_full_test.cpp  sumador
legacy/phase1_refactor/: AdderSub4Bit.cpp  AdderSub4Bit.hpp  ComparatorUnit4Bit.cpp  ComparatorUnit4Bit.hpp
legacy/v1_8bit_transition/: Computer_Top.h
legacy/v1_8bit_transition/ALU/: ALU.cpp  AdderSub4Bit.hpp  LogicUnit4Bit.cpp  LogicUnit4Bit.hpp  Mux16to1.hpp
legacy/v1_8bit_transition/Control/: ControlUnit.hpp  InstructionRegister.cpp  ProgramCounter.hpp  main_cu.cpp  main_pc.cpp
legacy/v1_8bit_transition/Memory/: MAR.cpp  MAR.hpp  RAM16x8.hpp
legacy/v1_8bit_transition/Registers/: OutputRegister.hpp  RegisterA.cpp  RegisterA.hpp  RegisterB.cpp  RegisterB.hpp  main.cpp
